--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>qyjj</title>
+    <title>全友家居（QUANYOU）官方网站 - 绿色全友，温馨世界！</title>
+    <link rel="stylesheet" href="./iconfont/iconfont.css">
+    <style>
+      *{
+        font-family: "Microsoft YaHei","Helvetica","STHeiTi", Arial, sans-serif;
+        margin:0;
+        padding:0;
+        list-style: none;
+      }
+      a{
+        text-decoration: none;
+        color:#333;
+      }
+    </style>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but qyjj doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
+    
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
